Alignment Issues

--- a/styles.css
+++ b/styles.css
@@ -11,14 +11,15 @@
 .header {
   display: flex;
   background-color: white;
-  flex-direction: row;
   justify-content: space-between;
   align-content: center;
+  vertical-align: center;
+  margin: 10px;
+  align-items: center;
 }
 
 .links {
   font-size: 150%;
-  align-content: center;
 }
 
 .links a {
@@ -71,7 +72,7 @@ a {
   background-color: white;
   position: absolute;
   padding: 10px;
-  bottom: 11%;
+  bottom: 10%;
 }
 
 .GreenText {
